setup project with react-redux linters and readme files

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,16 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#ignoring html/css linters
+
+.hintrc
+.stylelintrc.json
+
+#ignoring hint report folder produced by hint
+hint-report/
+
+#ignoring esLint linter files
+
+.eslintrc.json
+
